tests/error/func_ret_array_empty.gw
#! [contains] array must be empty
fun int[1] my_func(int[] i){}
